--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Calculadora</title>
 </head>
+
 <body>
     <main class="calculator">
         <section class="calculator-display">
@@ -36,9 +38,11 @@
             <div id="buttonNumber3" onclick="updateDisplay(3)">3</div>
             <div id="resultButton">=</div>
 
-
         </section>
+
+        <p class="developer-area">Developed by <a href="https://github.com/camilapinh3iro" target="_blank">Camila Pinheiro</a></p>
     </main>
     <script type="text/javascript" src="js/calculator.js"></script>
 </body>
+
 </html>
